Updates from Overleaf

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -2,13 +2,13 @@ Over the last couple of years, there has been a revolutionary
 initiative in the field of combinatronics.
 Combinatronics has been a field of study in mathematics that primarily focused on
 the notion of counting objects with certain properties. Over time, this notion
-has shifted, especially in the subfield of algebraic combinatronics, where
+has shifted, especially in the subfield of algebraic combinatorics, where
 there is no clear notion of the object that we are counting,
 and the numbers express something more abstract \cite{pakWhatCombinatorialInterpretation2022}. %% Add the other two missing papers: Igors and the other guy
 This gave a need to be able to assign a combinatorial interpretation to such numbers, or
 more simply, do these numbers correspond to some counting over a set of objects.
 Being able to find such definitions or interpretations can be very important,
-it allows us to utilise tools from combinatronics as well as allow us to understand
+it allows us to utilise tools from combinatorics as well as allow us to understand
 and reveal hidden structures and properties for such numbers \cite{pakWhatCombinatorialInterpretation2022}. 
 Moreover, there are several problems or numbers such as \textit{Kronecker coefficients},
 whose combinatorial interpretation, would give a step towards the resolution of the $\textit{P} \neq \textit{NP}$
@@ -37,7 +37,7 @@ problems, also known as $\textit{PPAD} \subseteq \textit{TFNP}$,
 different $\textit{PPAD-complete}$ problems, may or may not have a combinatorial
 interpretation. Our contribution, comes to the analysis of a specific
 problem, known as $\text{PureCircuit}$, which utilises
-Kleene logic, to find satisfying assingments in sequential circuits.
+Kleene logic, to find satisfying assignments in sequential circuits.
 We hope to demonstrate that such problem could help us bound, the
 counting complexity limits of $\textbf{\#}\text{PureCircuit} -1$.
 
