--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,6 @@
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{tikz}
-\usepackage{caption}
 \usepackage{subcaption}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
@@ -82,9 +81,6 @@ u2018918@live.warwick.ac.uk, u2018918}}
 \section{Next Steps}
 \input{sections/next_steps}
 
-\section{Project Plan} 
-\input{sections/project_plan}
-
 \section{Appraisals}
 \input{sections/appraisals.tex}
 
@@ -97,9 +93,8 @@ u2018918@live.warwick.ac.uk, u2018918}}
 \bibliographystyle{IEEEtran}
 \bibliography{dissertation}
 
-
-%TC:ignore
-\input{sections/appendix}
-%TC:endignore
+% %TC:ignore
+% \input{sections/appendix}
+% %TC:endignore
 
 \end{document}
