--- a/sections/main_findings.tex
+++ b/sections/main_findings.tex
@@ -1,3 +1,7 @@
+\subsection{Current Timetable}
+\input{sections/current_progress/current_timetable}
+
+
 \subsection{Theory Progress}
 \input{sections/current_progress/theory_progress}
 
