--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -16,21 +16,21 @@ Up to the current phase of our project, we were able to gather several important
 Exploring the literature and trying to work the problem under different perspectives
 may lead to potential breakthroughs. The main catalyst to our core finding, came
 when looking into problems such as \textsc{EOPL} or more specifically
-the \textsc{OPDC} problem, described by Fernley et al. \cite{fearnleyUniqueEndPotential2020}.
+the \textsc{OPDC} problem, described by Fernley et al. \cite{fearnley_unique_2020}.
 \textsc{OPDC} can be described as a simpler version of the traditonal n-dimensional Brouwer problem
 where instead, we have a unqiue fixed point and our function will point towards the unique solution.
 Moreover, deeper look into Kleene-logic or more specifically \textit{Hazard-free} circuits allowed
-us to exploit the $\bot$ value to compute multiple input simultaneously \cite{ikenmeyerComplexityHazardfreeCircuits2019}.
+us to exploit the $\bot$ value to compute multiple input simultaneously \cite{ikenmeyer_complexity_2019}.
 Using the two aforementioned observations as well as looking at the original reduction again allowed us to achieve
 the desired breakthrough.
 
 In order to accomplish the above research, we have also learned how to research more effectively.
-Exploitation of LLMs such as \texttt{ChatGPT}, \texttt{Perplexiy} and more, we are able to
+Exploitation of LLMs such as \texttt{ChatGPT}, \texttt{Perplexity} and more, we are able to
 approach the problem from multiple perspectives. Moreover, thought organisation and cataloguing with
 \texttt{Obsidian}
 also came crucial when handling a large volume of ideas and information over a long period of time,
 as explained in the previous sections. Last but not least, utilisation of books,
-related research and textbooks also came important when it came to theory crafting and idea extaction.
+related research and textbooks also came important when it came to theory crafting and idea extraction.
 
 Last but not least, the general approach to the project changed over the course of time.
 Understanding that the journey of discovery as important as the discovery itself,
