--- a/sections/current_progress/soft_progress.tex
+++ b/sections/current_progress/soft_progress.tex
@@ -33,7 +33,7 @@ of our current visualisation in \ref{fig:soft:current-phases}
         \label{fig:soft-phase-1:add-edge}
     }
     \subfloat[Final state]{
-        \includegraphics[width=0.3\linewidth]{assets/ soft-phase-1-final-state.png}
+        \includegraphics[width=0.3\linewidth]{assets/soft-phase-1-final-state.png}
         \label{fig:soft-phase-1:final-state}
     }
     \caption{Screenshots of different states of the visualisation tool}
