--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -4,15 +4,15 @@ Combinatronics has been a field of study in mathematics that primarily focused o
 the notion of counting objects with certain properties. Over time, this notion
 has shifted, especially in the subfield of algebraic combinatorics, where
 there is no clear notion of the object that we are counting,
-and the numbers express something more abstract \cite{pakWhatCombinatorialInterpretation2022}. %% Add the other two missing papers: Igors and the other guy
+and the numbers express something more abstract \cite{pak_what_2022,ikenmeyer_what_2022, ikenmeyer_positivity_2024}.
 This gave a need to be able to assign a combinatorial interpretation to such numbers, or
 more simply, do these numbers correspond to some counting over a set of objects.
 Being able to find such definitions or interpretations can be very important,
 it allows us to utilise tools from combinatorics as well as allow us to understand
-and reveal hidden structures and properties for such numbers \cite{pakWhatCombinatorialInterpretation2022}. 
+and reveal hidden structures and properties for such numbers \cite{pak_what_2022}. 
 Moreover, there are several problems or numbers such as \textit{Kronecker coefficients},
 whose combinatorial interpretation, would give a step towards the resolution of the $\textit{P} \neq \textit{NP}$
-conjecture \cite{ikenmeyerWhatWhatNot2022a}.
+conjecture \cite{ikenmeyer_what_2022}.
 
 
 To reiterate the previous statement, we can understand combinatorial interpretation as
@@ -20,7 +20,7 @@ the process of: given a sequence of numbers $\{a_x\}$,
 find a set of combinatorial objects $A_x$ such that $|A_x| = a_x$
 To formalise the current idea, Igor Pak et al. has concluded that
 $f \in \textit{\#P}$, implies that $f$ has a combinatorial interpretation
-\cite{pakWhatCombinatorialInterpretation2022, ikenmeyerWhatWhatNot2022a}.
+\cite{pak_what_2022, ikenmeyer_what_2022}.
 We will explore this idea in much greater detail in the upcoming section,
 but the main benefit is the ability to use a very expressive but formal language
 that encapsulates this notion of a combinatorial interpretation.
