--- a/sections/lit_review.tex
+++ b/sections/lit_review.tex
@@ -1,20 +1,5 @@
 % LTeX: enabled=true
 
-
-% \subsection{Important Notation}
-%
-% To avoid ambiguity, we introduce the following notation 
-% \begin{itemize}
-%     \item $\forall n \in \mathbb{N}: [n] \triangleq \{1, ..., n\}$
-%     \item $\forall n \in \mathbb{N}: [n]_0 \triangleq [n] \cup \{0\}$
-%     \item $\forall n \in \mathbb{N}: \bar{n}$ implies the unary representation of the number $n$ and $n$ by default implies the binary
-%     \item $A^B \triangleq \{f \mid f: A \to B\}$
-%     \item $\mathbb{B} \triangleq \{0,1\}$
-%     \item $\mathbb{N} \triangleq \mathbb{Z}_{\geq 1}$
-%     \item $\mathbb{N}_0 \triangleq \mathbb{Z}_{\geq 0}$
-% \end{itemize}
-%
-%
 \subsection{Important Notation}
 
 To avoid ambiguity, we introduce the following notation conventions used throughout the paper.
@@ -37,7 +22,7 @@ of three different fields: 1. counting complexity and combinatorial interpretati
 \subsubsection{Counting Complexity and Combinatorial Interpretations}
 As we previously mentioned, we say that an object or a structure $f$
 has a combinatorial interpretation if $f \in \textbf{\#P}$. $\textbf{\#P}$
-is a complexity class created by Valiant \cite{valiantComplexityComputingPermanent1979},
+is a complexity class created by Valiant \cite{valiant_complexity_1979},
 to define a formal combinatorial framework in complexity theory.
 
 
@@ -57,7 +42,7 @@ to define a formal combinatorial framework in complexity theory.
     $$
 \end{definitionbox}
 
-$\textbf{\#P}$ was initially created by \cite{valiantComplexityComputingPermanent1979},
+$\textbf{\#P}$ was initially created by \cite{valiant_complexity_1979},
 to demonstrate, that even if we have a problem $L \in P$, $\#L$ can be computationally
 hard to compute, by providing an example of computing the permanent of
 a 01-matrix, with number of perfect matchings. 
@@ -65,7 +50,7 @@ a 01-matrix, with number of perfect matchings.
 As we can see, $\textbf{\#P}$ allows us to define a set of objects,
 whose cardinality equals $f(w)$. Core reasoning for choosing
 $\textbf{\#P}$ to define combinatorial objects is mainly for the 
-following two reasons \cite{ikenmeyerPositivitySymmetricGroup2024}: 
+following two reasons \cite{ikenmeyer_positivity_2024}: 
 
 \begin{enumerate}
     \item By polynomially bounding words, we avoid cases such as: $f(w) = \{1, \hdots, f(w)\}$
@@ -74,10 +59,10 @@ following two reasons \cite{ikenmeyerPositivitySymmetricGroup2024}:
 
 
 The current framework was used in several papers such as
-\cite{ikenmeyerWhatWhatNot2022} and \cite{ikenmeyerPositivitySymmetricGroup2024}
+\cite{ikenmeyer_what_2022} and \cite{ikenmeyer_positivity_2024}
 where they were able to use tools from complexity theory to show that
 many structures do or do not have a combinatorial interpretation.
-For the purposes of the current project, we are focusing on \cite{ikenmeyerWhatWhatNot2022},
+For the purposes of the current project, we are focusing on \cite{ikenmeyer_what_2022},
 where they demonstrated how several $\textsc{TFNP}$ problems, 
 change in complexity as we ignore one of its solutions.
 
@@ -153,7 +138,7 @@ which is defined as follows:
 \end{definition}
 
 
-\textbf{PPAD} has been created by Papadimitriou \cite{papadimitriouComplexityParityArgument1994}
+\textbf{PPAD} has been created by Papadimitriou \cite{papadimitriou_complexity_1994}
 to demonstrate a subset of problems in \textbf{NP} that are guaranteed to have
 a solution but can be very difficult to find. We will define
 several problems of interest as they will be referenced in later sections.
