--- a/sections/next_steps.tex
+++ b/sections/next_steps.tex
@@ -1,5 +1,3 @@
-%Add missing gantt chart
-
 
 \subsection{Theory Crafting Next steps}
 
@@ -32,25 +30,25 @@ course due to the nature of the problem, finding a single or all solutions for b
 is computationally difficult. We aim to investigate a method introduced by Eichelberger, where
 he utilised repeated applications of the circuit to detect oscillations and replace them with
 $\bot$ values. The usage of that procedure was to detect hazard but aim to utilise that procedure
-as a heuresaaaawtical approach to reach a satisfying assignment. We do not primarily aim
-to fully optimise these algorithms, as the project focuses more on analysing the theoritical findings
+as a heuristical approach to reach a satisfying assignment. We do not primarily aim
+to fully optimise these algorithms, as the project focuses more on analysing the theoretical findings
 of \textsc{PureCircuit}.
 
 
-
-Altrenatively, one can use some facts of \textsc{PureCircuit} showed by Deligkas et al.
-\cite{deligkasPureCircuitTightInapproximability2024}, were under specific 
+Alternatively, one can use some facts of \textsc{PureCircuit} showed by Deligkas et al.
+\cite{deligkas_pure-circuit_2024}, were under specific 
 gate sets, one can find a \textsc{PureCircuit} instance in polynomial time.
 Additionally we were able to find instances or variants of \textsc{PureCircuit}
 that are much easier. Conditions like acyclicity make our problem much easier to deal with
 or permutation free circuit, make the problem easier to solve.
 But just because a solution can be easy to find, does not imply that finding the total number of solutions
-is easy, as \cite{valiantComplexityComputingPermanent1979} indicated, or from a more direct
-example by \cite{aroraComputationalComplexityModern2009}, where
+is easy, as \cite{valiant_complexity_1979} indicated, or from a more direct
+example by \cite{arora_computational_2009}, where
 $$
-\textsc{HamiltonianCycle} \leq \textsc{\#Cycle}
+\textsc{HamiltonianCycle} \leq_P \textsc{\#Cycle}
 $$
 
 
+\subsection{Risk Management}
 
 
